# fishmlserv

./: Dockerfile  MANIFEST.in  README.md  f.py  fly.toml  pyproject.toml
LB/: Dockerfile  default.conf
dags/: Apipred.py  fastapi.py
note/: untitle.ipynb  untitle2.ipynb
src/fishmlserv/: .cli3.py.swp  cli.py  cli2.py  cli3.py  curl.py  main.py
src/fishmlserv/model/: manager.py  model1.pkl  model15.pkl  model25.pkl  model49.pkl
tests/: test_curl.py
