[project]
name = "fishmlserv"
version = "0.8.4"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
get-model-path = 'fishmlserv.cli:print_path'
prediction = 'fishmlserv.cli2:app'

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
