[project]
name = "fishmlserv"
version = "0.8.8"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "typer>=0.12.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
get-model-path = 'fishmlserv.cli:print_path'
prediction = 'fishmlserv.cli2:run_main'

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
